--- a/MyApplication/app/src/main/res/layout/loginactivity.xml
+++ b/MyApplication/app/src/main/res/layout/loginactivity.xml
@@ -1,73 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
+
+    <EditText
+        android:id="@+id/et_eamil"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="10"
-        android:orientation="horizontal">
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp" />
 
-        <TextView
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="4"
-            android:text="ID"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-        <EditText
-            android:id="@+id/editID"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="6"
-            android:hint="email"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-    </LinearLayout>
-    <LinearLayout
+    <EditText
+        android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="10"
-        android:orientation="horizontal">
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp" />
 
-        <TextView
-            android:layout_width="74dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:text="Password"
-            android:layout_margin="5dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-        <EditText
-            android:id="@+id/editpw"
-            android:layout_width="333dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="6"
-            android:hint="Password"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
+
         <Button
+            android:id="@+id/btn_signUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
             android:layout_weight="1"
-            android:layout_margin="5dp"
-            android:id="@+id/SignUp"
-            android:text="Sign Up"/>
+            android:onClick="singUp"
+            android:text="signup" />
+
         <Button
+            android:id="@+id/btn_signIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="50dp"
             android:layout_weight="1"
-            android:id="@+id/SignIn"
-            android:layout_margin="5dp"
-            android:text="Sign In"/>
+            android:onClick="signIn"
+            android:text="signin" />
+
     </LinearLayout>
-    
 
 </LinearLayout>
+
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:orientation="vertical" android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent">-->
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:weightSum="10"-->
+<!--        android:orientation="horizontal">-->
+
+<!--        <TextView-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="10dp"-->
+<!--            android:layout_weight="4"-->
+<!--            android:text="ID"-->
+<!--            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/editID"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="10dp"-->
+<!--            android:layout_weight="6"-->
+<!--            android:hint="email"-->
+<!--            android:textAppearance="@style/TextAppearance.AppCompat.Large" />-->
+<!--    </LinearLayout>-->
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:weightSum="10"-->
+<!--        android:orientation="horizontal">-->
+
+<!--        <TextView-->
+<!--            android:layout_width="74dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="4"-->
+<!--            android:text="Password"-->
+<!--            android:layout_margin="5dp"-->
+<!--            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/editpw"-->
+<!--            android:layout_width="333dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="10dp"-->
+<!--            android:layout_weight="6"-->
+<!--            android:hint="Password"-->
+<!--            android:textAppearance="@style/TextAppearance.AppCompat.Large" />-->
+<!--    </LinearLayout>-->
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal">-->
+<!--        <Button-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:layout_margin="5dp"-->
+<!--            android:id="@+id/SignUp"-->
+<!--            android:text="Sign Up"/>-->
+<!--        <Button-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:id="@+id/SignIn"-->
+<!--            android:layout_margin="5dp"-->
+<!--            android:text="Sign In"/>-->
+<!--    </LinearLayout>-->
+<!--    -->
+
+<!--</LinearLayout>-->
+
+
 
