dynamic link + 매개변수

--- a/MyApplication/app/src/main/res/layout/activity_dynamic.xml
+++ b/MyApplication/app/src/main/res/layout/activity_dynamic.xml
@@ -7,7 +7,7 @@
     app:layoutDescription="@xml/activity_dynamic_scene">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/dynamicTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="DynamicLinkActivity" />
