--- a/MyApplication/app/src/main/res/layout/mypage_edit.xml
+++ b/MyApplication/app/src/main/res/layout/mypage_edit.xml
@@ -41,7 +41,7 @@
                 android:textSize="14dp"></TextView>
 
             <EditText
-                android:id="@+id/tv_text"
+                android:id="@+id/mypage_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
@@ -53,7 +53,7 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/mypageAddBtn"
+        android:id="@+id/mypageSaveBtn"
         android:layout_width="182dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
