--- a/MyApplication/app/src/main/res/layout/activity_familysetting.xml
+++ b/MyApplication/app/src/main/res/layout/activity_familysetting.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/FamilyImageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/familyship" />
@@ -15,7 +15,8 @@
         android:id="@+id/FamilyImageUpload"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="imageUpload" />
+        android:text="imageUpload(opengallery)"
+        />
 
     <EditText
         android:id="@+id/editTextFamilyname"
