--- a/MyApplication/app/src/main/res/layout/activity_familysetting.xml
+++ b/MyApplication/app/src/main/res/layout/activity_familysetting.xml
@@ -5,31 +5,41 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/FamilyImageView"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/familyship" />
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/FamilyImageUpload"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="imageUpload(opengallery)"
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <EditText
-        android:id="@+id/editTextFamilyname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="가족 이름 정하기"
-        android:inputType="textPersonName"
-        android:text="Name" />
+            <ImageView
+                android:id="@+id/FamilyImageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/FamilynameDefine"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="FamilynameDefine" />
+            <Button
+                android:id="@+id/FamilyImageUpload"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="imageUpload(opengallery)" />
+
+            <EditText
+                android:id="@+id/editTextFamilyname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="가족 이름 정하기"
+                android:inputType="textPersonName"
+                android:text="Name" />
+
+            <Button
+                android:id="@+id/FamilynameDefine"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="FamilynameDefine" />
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
