--- a/MyApplication/app/src/main/res/layout/mypage_edit.xml
+++ b/MyApplication/app/src/main/res/layout/mypage_edit.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/round_corner"
+
         android:layout_marginTop="6dp"
         android:orientation="horizontal">
         <LinearLayout
@@ -29,16 +29,17 @@
             android:orientation="vertical"
             android:layout_gravity="center">
 
-            <TextView
+            <EditText
                 android:id="@+id/list_which"
                 android:layout_width="248dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:text="목록을 선택하기 위하여 클릭하세요"
+                android:hint="제목을 입력하세요"
                 android:textColor="#ff0000"
-                android:textSize="14dp"></TextView>
+                android:textSize="14dp"></EditText>
+
 
             <EditText
                 android:id="@+id/mypage_edittext"
@@ -52,15 +53,15 @@
         </LinearLayout>
     </LinearLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/mypageSaveBtn"
-        android:layout_width="182dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#FCBF48"
-        android:clickable="true"
-        android:src="@drawable/plus" />
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/mypageSaveBtn"-->
+<!--        android:layout_width="70dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        android:layout_marginBottom="16dp"-->
+<!--        android:backgroundTint="#FCBF48"-->
+<!--        android:clickable="true"-->
+<!--        android:src="@drawable/plus" />-->
 
 
 </LinearLayout>
