--- a/MyApplication/app/src/main/res/layout/mypage_content.xml
+++ b/MyApplication/app/src/main/res/layout/mypage_content.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/allLayout"
     android:layout_width="match_parent"
-    android:orientation="horizontal"
-    android:background="@drawable/round_corner"
+    android:layout_height="wrap_content"
     android:layout_marginTop="6dp"
-    android:layout_height="wrap_content">
+    android:background="@drawable/round_corner"
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:gravity="center"
         android:orientation="horizontal">
+
         <ImageView
             android:id="@+id/medicineImageView"
             android:layout_width="50dp"
@@ -19,11 +21,11 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginLeft="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:layout_marginLeft="16dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_number"
@@ -42,32 +44,29 @@
             android:layout_marginTop="3dp"
             android:layout_toRightOf="@+id/tv_number"
             android:textColor="#0000ff"
-            android:textSize="11dp">
-        </TextView>
+            android:textSize="11dp"></TextView>
     </LinearLayout>
 
 
+    <!--    <TextView-->
+    <!--        android:id="@+id/tv_number"-->
+    <!--        android:layout_width="24dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_alignParentStart="true"-->
+    <!--        android:layout_alignParentTop="true"-->
+    <!--        android:textColor="#ff0000"-->
+    <!--        android:textSize="14dp"-->
+    <!--        android:layout_alignParentLeft="true">-->
+    <!--    </TextView>-->
 
-
-<!--    <TextView-->
-<!--        android:id="@+id/tv_number"-->
-<!--        android:layout_width="24dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_alignParentStart="true"-->
-<!--        android:layout_alignParentTop="true"-->
-<!--        android:textColor="#ff0000"-->
-<!--        android:textSize="14dp"-->
-<!--        android:layout_alignParentLeft="true">-->
-<!--    </TextView>-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/tv_text"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="3dp"-->
-<!--        android:layout_toRightOf="@+id/tv_number"-->
-<!--        android:textColor="#0000ff"-->
-<!--        android:textSize="11dp">-->
-<!--    </TextView>-->
+    <!--    <TextView-->
+    <!--        android:id="@+id/tv_text"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginTop="3dp"-->
+    <!--        android:layout_toRightOf="@+id/tv_number"-->
+    <!--        android:textColor="#0000ff"-->
+    <!--        android:textSize="11dp">-->
+    <!--    </TextView>-->
 
 </LinearLayout>
