--- a/MyApplication/app/src/main/res/layout/activity_familysetting.xml
+++ b/MyApplication/app/src/main/res/layout/activity_familysetting.xml
@@ -5,41 +5,101 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ScrollView
+    // title
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="#fcbf48"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <LinearLayout
+        <Button
+            android:id="@+id/boardRtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@null"
+            android:text="&lt;"
+            android:textColor="#ffffff"
+            android:textSize="30dp" />
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_gravity="center"
+            android:layout_weight="7"
+            android:gravity="center"
+            android:text=""
+            android:textSize="20dp" />
 
-            <ImageView
-                android:id="@+id/FamilyImageView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/doneFamily"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/roundback"
+            android:gravity="center"
+            android:text="완료"
+            android:textColor="#fcbf48"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
-            <Button
-                android:id="@+id/FamilyImageUpload"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="imageUpload(opengallery)" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="5dp"
+        android:gravity="center"
+        android:text="그룹 생성하기"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-            <EditText
-                android:id="@+id/editTextFamilyname"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="가족 이름 정하기"
-                android:inputType="textPersonName"
-                android:text="Name" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="이미지를 터치하여 변경하세요."
+        android:textSize="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-            <Button
-                android:id="@+id/FamilynameDefine"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="FamilynameDefine" />
-        </LinearLayout>
-    </ScrollView>
+    <ImageView
+        android:id="@+id/FamilyImageView"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/familyship" />
 
+    <!--    <Button-->
+    <!--        android:id="@+id/FamilyImageUpload"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="imageUpload(opengallery)"-->
+    <!--        />-->
+
+    <EditText
+        android:id="@+id/editTextFamilyname"
+        android:layout_width="300dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="가족 이름 정하기"
+        android:inputType="textPersonName"/>
+
+    <!--    <Button-->
+    <!--        android:id="@+id/FamilynameDefine"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="FamilynameDefine" />-->
 </LinearLayout>
