--- a/MyApplication/app/src/main/res/layout/loginactivity.xml
+++ b/MyApplication/app/src/main/res/layout/loginactivity.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        app:srcCompat="@drawable/ic_launcher_foreground" />
+        android:src="@drawable/ic_launcher_foreground" />
 
     <EditText
         android:id="@+id/et_eamil"
