--- a/MyApplication/app/src/main/res/layout/loginactivity.xml
+++ b/MyApplication/app/src/main/res/layout/loginactivity.xml
@@ -4,27 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity"
-    android:background="@drawable/gradation">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/ic_launcher_foreground" />
+        android:layout_marginTop="100dp"
+        android:src="@mipmap/familyship" />
 
     <EditText
         android:id="@+id/et_eamil"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:layout_marginRight="50dp"
         android:background="#FFFFFF"
-        android:hint="   id"
+        android:hint="id"
+        android:padding="10dp"
         android:minHeight="48dp" />
 
     <EditText
@@ -34,8 +33,9 @@
         android:layout_marginTop="2dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:hint="  password"
+        android:hint="password"
         android:background="#FFFFFF"
+        android:padding="10dp"
         android:minHeight="48dp" />
 
     <LinearLayout
@@ -47,7 +47,7 @@
             android:id="@+id/btn_signIn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:layout_weight="1"
@@ -60,7 +60,7 @@
             android:id="@+id/btn_signUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:layout_weight="1"
@@ -85,7 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
-        android:backgroundTint="#00FF0000"
+        android:background="#00FF0000"
         android:textColor="@color/black"
         android:text="id/비밀번호 찾기" />
 
