--- a/MyApplication/app/src/main/res/layout/mypage_activity.xml
+++ b/MyApplication/app/src/main/res/layout/mypage_activity.xml
@@ -46,6 +46,13 @@
             android:orientation="vertical"
             tools:ignore="MissingConstraints">
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="로그아웃"
+                android:id="@+id/btnLogout"
+                android:background="@null"/>
+
 
             <ImageView
                 android:id="@+id/peopleFace"
