--- a/MyApplication/app/src/main/res/layout/activity_insert_invite_code.xml
+++ b/MyApplication/app/src/main/res/layout/activity_insert_invite_code.xml
@@ -91,6 +91,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:textSize="20dp"
+            android:singleLine="true"
+            android:inputType=""
             android:background="@null"
             android:hint="코드 입력"/>
         <Button
